k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-ingress
  namespace: sa-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: sa.local
      http:
        paths:
          - path: /api/user/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /api/product/
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 3002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
